--- a/index (2).html
+++ b/index (2).html
@@ -258,7 +258,7 @@
           color: #fff;
           padding: 20px;
           margin: 0;
-          background-image: url('images.jpg');
+          background-image: url('images (1).jpg');
           background-size: cover;
           background-position: center;
       }
@@ -365,7 +365,7 @@
               infections in vulnerable regions.
 
           </p>
-        <img src="Allocation.jpg" alt="Allocation Image" style="max-width: 100%; height: auto; margin-top: 20px;">
+        <img src="Allocation (1).jpg" alt="Allocation Image" style="max-width: 100%; height: auto; margin-top: 20px;">
       </div>
     </center>
 
@@ -402,7 +402,7 @@
           <h1 class="transition-fade">Looking at the Data</h1>
           <img id = "my-visualizations" class="transition-fade" id="animation.gif" src="animation.gif" alt="Bar Plot">
           <button class="share-button" onclick="share('animation.gif')">Share</button>
-          <img id = "my-visualizations" class="transition-fade" id="scatterplotImage" src="scatter_plot_animation.png" alt="Scatterplot">
+          <img id = "my-visualizations" class="transition-fade" id="scatterplotImage" src="scatter_plot_animation (1).png" alt="Scatterplot">
           <button class="share-button" onclick="share('scatter_plot_animation.png')">Share</button>
       <hr class="section-divider">
       <h1 id = "my-analysis" class="transition-fade">What does this data mean?</h1>
